check_errors.txt
    Checking opengl_renderer v0.1.0 (C:\Users\sarib\Desktop\HakanCalismalar\Rust\OpenGL-Renderer-Rust)
warning: unused import: `crate::math::Vector2D`
 --> src\shapes\mod.rs:4:9
  |
4 | pub use crate::math::Vector2D;
  |         ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Vec4`
 --> src\light\mod.rs:1:18
  |
1 | use glam::{Vec3, Vec4};
  |                  ^^^^

warning: unused import: `vector3d::Vector3D`
 --> src\math\mod.rs:5:9
  |
5 | pub use vector3d::Vector3D;
  |         ^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src\game\mod.rs:176:21
    |
176 |                 let (mx, my) = self.input.mouse_pos;
    |                     ^^^^^^^^   -------------------- this expression has type `Vec2`
    |                     |
    |                     expected `Vec2`, found `(_, _)`
    |
    = note: expected struct `Vec2`
                found tuple `(_, _)`

For more information about this error, try `rustc --explain E0308`.
warning: `opengl_renderer` (bin "opengl_renderer") generated 3 warnings
error: could not compile `opengl_renderer` (bin "opengl_renderer") due to 1 previous error; 3 warnings emitted
